<resources>
    <string name="app_name">Mobilne-Projekt</string>
    <string name="name">Imię: </string>
    <string name="surname">Nazwisko: </string>
    <string name="email">Email: </string>
    <string name="telephone">Telefon: </string>
    <string name="arrival_date">Od: </string>
    <string name="departue_date">Do: </string>
    <string name="number_adults">Ilość dorosłych: </string>
    <string name="number_babies">Ilość dzieci: </string>
    <string name="train">PKP: </string>
    <string name="dog">Pies: </string>
    <string name="airport">Lotnisko: </string>
    <string name="cleaning">Sprzątanie: </string>
    <string name="days_number">Ilość dni: </string>
    <string name="download_Data">Pobierz dane</string>
    <string name="days">Dni:</string>
    <string name="call">Zadzwoń</string>
    <string name="emailClient">Napisz wiadomość</string>
    <string name="yesMessage">Email - POTWIERDŹ</string>
    <string name="noMessage">Email - ODRZUĆ</string>
    <string name="choosseEmaiClient">Wybierz program do wysłania wiadomości:</string>
    <string name="noEmailApp">Brak aplikacji email!</string>
    <string name="noInternetConn">Brak połączenia z Internetem!</string>
    <string name="loadingData">Ładowanie danych...</string>
    <string name="makeBoking">Rezerwuj</string>
    <string name="query">Zapytanie</string>
    <string name="queries">Zapytania</string>
    <string name="booking">Rezerwacja</string>
    <string name="setPrices">Ustaw ceny</string>
    <string name="adultPrice">Dorosly: </string>
    <string name="pln">PLN</string>
    <string name="babyPrice">Dziecko:  </string>
    <string name="trainPrice">Transport z dworca PKP:</string>
    <string name="airportPrice">Transport z lotniska:</string>
    <string name="preference_file_key">priceList</string>
    <string name="dogPrice">Pies: </string>
    <string name="cleaningPrice">Sprzątanie: </string>
    <string name="price">Cena: </string>
    <string name="cena_ca_kowitatotalPrice">Cena całkowita:</string>
    <string name="totalPrice">Cena całkowita:</string>
    <string name="countPrices">Przelicz ceny</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Zmień</string>
    <string name="SendMessage">Napisz wiadomość</string>
    <string name="showBookings">Pokaż rezerwacje</string>
    <string name="showQueries">Pokaż zapytania</string>
    <string name="Bookings">Rezerwacje:</string>
    <string name="save">Zapisz</string>
    <string name="noPricelist">Najpierw ustaw ceny!</string>
    <string name="newBooking">NOWA REZERWACJA</string>
    <string name="sendingPrices">Wysyłanie cen na serwer</string>
    <string name="pricesSent">Ceny wysłane na serwer!</string>
    <string name="deleted">Usunięto</string>
    <string name="deletingReservation">Usuwanie rezerwacji</string>
    <string name="deleteReservation">Usunąć rezerwację?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="deletingQuery">Usuwanie zapytania!</string>
    <string name="deleteQuery">Usunąć zapytanie z serwera?</string>
    <string name="queryDeleted">Zapytanie usunięte!</string>
    <string name="makingBooking">Tworzenie rezerwacji!</string>
    <string name="makeBooking">Utworzenie rezerwacji usunie zapytanie z serwera. Kontynuować?</string>
    <string name="notification_title">Nowe zapytanie!</string>
    <string name="notification_text">Na serwerze czeka nowe zapytanie od klienta!</string>
    <string name="from">Rezerwacja mieszkania w Krakowie od:</string>
    <string name="upTo">do:</string>
</resources>
