<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/queriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showQueries"
        android:onClick="showQueries"/>

    <Button
        android:id="@+id/bookingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showBookings"
        android:onClick="showBookings"/>

    <Button
        android:id="@+id/pricesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setPrices"
        android:onClick="setPrices"/>




</LinearLayout>
