<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/query"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/surnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/arDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_date"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/arDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />
        <TextView
            android:id="@+id/depDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departue_date"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/depDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />
        <TextView
            android:id="@+id/daysTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/daysEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/adultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_adults"
        android:textSize="18dp"
        android:layout_margin="2dp"
        />
    <EditText
        android:id="@+id/adultsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_margin="2dp"
        />
    <TextView
        android:id="@+id/babiesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_babies"
        android:textSize="18dp"
        android:layout_margin="2dp"
        />
    <EditText
        android:id="@+id/babiesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_margin="2dp"
        />
</LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/trainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        android:textSize="18dp"
        android:layout_margin="2dp"
        />

    <CheckBox android:id="@+id/trainCheckBox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="false"
        />




    <TextView
        android:id="@+id/airportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airport"
        android:textSize="18dp"
        android:layout_margin="2dp"
        />
    <CheckBox android:id="@+id/airportCheckBox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="false"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/dogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />

        <CheckBox android:id="@+id/dogCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="false"
            />




        <TextView
            android:id="@+id/cleaningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleaning"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <CheckBox android:id="@+id/cleaningCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="false"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/emailButtonYes"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/emailClient"
            android:onClick="emailClient"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />
        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/callButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:onClick="callClient"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/ButtonBook"
        android:layout_width="0px"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/makeBoking"
        android:onClick="bookThisQuery"/>



</LinearLayout>
    </LinearLayout>
</ScrollView>