<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/booking"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/surnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/arDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_date"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />

                />
            <EditText
                android:id="@+id/arDateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
            <Button
                android:id="@+id/arDateChangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:onClick="showDatePickerDialog" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/depDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departue_date"
                android:textSize="18dp"
                android:layout_margin="2dp"

                />
            <EditText
                android:id="@+id/depDateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_margin="2dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
            <Button
            android:id="@+id/depDateChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:onClick="showDatePickerDialog" />
            <TextView
                android:id="@+id/daysTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/daysEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/adultsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_adults"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />

            <EditText
                android:id="@+id/adultsEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="number" />
            <TextView
                android:id="@+id/adultsPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/adultPriceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/babiesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_babies"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/babiesEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="number"
                />
            <TextView
                android:id="@+id/babiesPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/babiesPriceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="numberDecimal"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/trainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />

            <CheckBox android:id="@+id/trainCheckBox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/trainPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/trainPriceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="numberDecimal"
                />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
            <TextView
                android:id="@+id/airportTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airport"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <CheckBox android:id="@+id/airportCheckBox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                />

                <TextView
                    android:id="@+id/airportPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="18dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/airportPriceEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:inputType="numberDecimal"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/dogTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />

            <CheckBox android:id="@+id/dogCheckBox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/dogPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/dogPriceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="numberDecimal"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/cleaningTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cleaning"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <CheckBox android:id="@+id/cleaningCheckBox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/cleaningPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/cleaningPriceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="numberDecimal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:textSize="18dp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="phone"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/totalPriceLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPrice"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="2dp"
            />

    </LinearLayout>

        <Button
            android:id="@+id/countButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countPrices"
            android:onClick="countPrices"/>


        <Button
            android:id="@+id/callButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:onClick="callClient"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ButtonBook"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/makeBoking"
                android:onClick="makeBooking"/>


            <Button
                android:id="@+id/emailButton"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/SendMessage"
                android:onClick="emailClient"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>